--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.mvc.view.prefix= /
 spring.mvc.view.suffix= .jsp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pimukov.pavel@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
