--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.mvc.view.suffix= .jsp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=pimukov.pavel@gmail.com
-spring.mail.password=vndiijnpsfgyyrsi
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jms.pub-sub-domain=true
